--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ colorama = "^0.4.6"
 sqlalchemy = "^2.0.17"
 cryptography = "^42.0.2"
 pandas = "^2.0.3"
+flask-caching = "^2.3.0"
 
 [tool.poetry.group.docs.dependencies]
 mkdocstrings-python = "^1.8.0"
