--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ flask-caching = "^2.3.0"
 mkdocstrings-python = "^1.8.0"
 mkdocs-material = "^9.5.10"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
